<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    tools:context=".EditTodoFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="TO-DO" />

    <EditText
        android:id="@+id/edit_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#B8B8B6"
        android:backgroundTint="#DAD6D6"
        android:ems="10"
        android:hint="@string/edit_title"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#D6D5D5"
        android:ems="10"
        android:hint="@string/edit_description"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_txt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#D6D3D3"
        android:ems="10"
        android:hint="@string/edit_date"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/lbl_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#1D5E67"
        android:text="@string/edit_priority" />

    <RadioGroup
        android:id="@+id/edit_rg_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/edit_rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#42FA04"
            android:text="@string/edit_high"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/edit_rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F8C303"
            android:text="@string/edit_medium"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/edit_rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F40909"
            android:text="@string/edit_low"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/edit_chk_isComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:minHeight="48dp"
        android:text="@string/edit_isComplete" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@drawable/istockphoto_1363738494_612x612"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_btn_save"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EF9D25"
            android:text="@string/edit_save" />

        <Button
            android:id="@+id/edit_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EFA435"
            android:backgroundTint="#EFA435"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>